relatorio all route and test done
